commit assadswqrqsf dsfsdfs

--- a/templates/admin_panel/authorize_session.html
+++ b/templates/admin_panel/authorize_session.html
@@ -20,7 +20,7 @@
                     <p>Open Telegram Bot to authorize:</p>
                     
                     <div class="my-4">
-                        <a href="https://t.me/Channels_hunt_bot?start={{ authorization_token }}" class="btn btn-lg btn-primary" target="_blank">
+                        <a href="{{ deep_link }}" class="btn btn-lg btn-primary" target="_blank">
                             <i class="fab fa-telegram"></i> Open Telegram Bot
                         </a>
                     </div>
