--- a/templates/admin_panel/index.html
+++ b/templates/admin_panel/index.html
@@ -444,6 +444,7 @@
             <a href="#messages" class="btn btn-light btn-lg" data-aos="fade-up" data-aos-delay="400">
                 <i class="fas fa-search me-2"></i> View messages
             </a>
+            <a href="https://t.me/chan_parsing_mon_bot" class="btn btn-info">Відкрити Telegram бот</a>
         </div>
     </section>
 
